--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,11 +2,11 @@
 
 @layer base {
   .text-edge-outline-dark {
-    -webkit-text-stroke: 0.5px rgba(255,255,255,0.3);
+    -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.3);
   }
-  
+
   .text-edge-outline-light {
-    -webkit-text-stroke: 0.4px rgba(0,0,0,0.5);
+    -webkit-text-stroke: 0.4px rgba(0, 0, 0, 0.5);
   }
 
   body {
@@ -45,19 +45,19 @@
 @import 'tailwindcss/utilities';
 
 @layer utilities {
-      .masonry {
-          column-gap: 1.5em;
-          column-count: 1;
-      }
-      .masonry-sm {
-          column-gap: 1.5em;
-          column-count: 2;
-      }
-      .masonry-md {
-          column-gap: 1.5em;
-          column-count: 3;
-      }
-      .break-inside {
-          break-inside: avoid;
-      }
+  .masonry {
+    column-gap: 1.5em;
+    column-count: 1;
   }
+  .masonry-sm {
+    column-gap: 1.5em;
+    column-count: 2;
+  }
+  .masonry-md {
+    column-gap: 1.5em;
+    column-count: 3;
+  }
+  .break-inside {
+    break-inside: avoid;
+  }
+}
